--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
             <span class="framework-text">FRAMEWORK</span>
           </h1>
         </div>
-        <h2>Generative Holistic Ontology for Synthetic Taxa</h2>
+        <h2>
+          Generative Holistic Ontology<br />
+          for Synthetic Taxa
+        </h2>
 
         <div class="description">
           <p>- an AI framework for synthetic sentience;</p>
@@ -53,7 +56,25 @@
           </a>
         </div>
 
-        <button id="contactBtn" class="contact-button">Contact</button>
+        <div class="contact-email">
+          <span id="safeEmailLink" aria-hidden="true"></span>
+          <span class="sr-only">
+            Contact: <a href="mailto:admin@ghostai.fr">admin@ghostai.fr</a>
+          </span>
+          <button
+            id="copyBtn"
+            class="copy-button"
+            aria-label="Copy email address"
+          >
+            📋 Copy
+          </button>
+          <span
+            id="copyMsg"
+            class="copy-msg"
+            role="status"
+            aria-live="polite"
+          ></span>
+        </div>
       </div>
 
       <footer class="legal-footer">
