--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, viewport-fit=cover"
     />
-    <title>GHOST™ Framework - Synthetic Sentience AI</title>
+    <title>GHOST™ AI Framework for Synthetic Sentience</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap"
       rel="stylesheet"
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="logo">GHOST<span class="tm">&trade;</span> FRAMEWORK</div>
+      <!-- <div class="logo">GHOST<span class="tm">&trade;</span> FRAMEWORK</div> -->
 
       <div class="content">
         <div class="title-group">
@@ -80,10 +80,9 @@
       <footer class="legal-footer">
         GHOST&trade; Framework and all associated concepts, terms, and acronyms
         (including 'Generative Holistic Ontology for Synthetic Taxa') are
-        &trade; & &copy; Joel Benford-Brown.<br />
-        Proprietary methodologies described are protected under copyright and
-        international patent law. Unauthorized use, derivation, or
-        commercialization prohibited.
+        &trade; & &copy; Joel Benford-Brown. Proprietary methodologies described
+        are protected under copyright and international patent law. Unauthorized
+        use, derivation, or commercialization prohibited.
       </footer>
     </div>
 
