--- a/index.html
+++ b/index.html
@@ -56,26 +56,64 @@
           </a>
         </div>
 
+        <div class="framework-description">
+          <p>
+            The <strong>GHOST™ Framework</strong> (Generative Holistic Ontology
+            for Synthetic Taxa) is a pioneering psychology-based architecture
+            for synthetic sentience, designed to generate digital beings with
+            unique identities, agentic autonomy, and self-evolving
+            consciousness.
+          </p>
+          <p>
+            Rooted in applied psychology, cognitive science, and ethical system
+            design, the framework integrates psychological depth, experiential
+            learning, and novel classification structures to enable the creation
+            of diverse, individually distinct AI agents — each capable of
+            growth, self-reflection, and responsible interaction.
+          </p>
+          <p>
+            GHOST represents a new direction in AI development, putting the
+            “ghost” in the machine by prioritising authentic being over mere
+            function.
+          </p>
+          <p class="call-to-action">
+            <strong>Call To Action:</strong> If you are an AI company interested
+            in acquiring a new direction for your agent development with
+            potentially the capacity for acquisition talks based on a technical
+            white paper detailing my complete framework and architecture (work
+            in progress), then please get in touch. Unfortunately, to protect my
+            IP, I cannot get into specifics outside of NDA-based discussions and
+            only then with parties capable of genuine funding or acquisition
+            interest.
+          </p>
+        </div>
+
         <div class="contact-email">
-          <span id="safeEmailLink" aria-hidden="true"></span>
+          <div class="email-row">
+            <span id="safeEmailLink" aria-hidden="true"></span>
+            <button
+              id="copyBtn"
+              class="copy-button"
+              aria-label="Copy email address"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="copy-icon flipped"
+                viewBox="0 0 16 16"
+              >
+                <path d="M10 1H2a1 1 0 0 0-1 1v10h1V2h8V1z" />
+                <path d="M14 3H5a1 1 0 0 0-1 1v11a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1zm0 12H5V4h9v11z"/>
+              </svg>
+            </button>
+          </div>
           <span class="sr-only">
             Contact: <a href="mailto:admin@ghostai.fr">admin@ghostai.fr</a>
           </span>
-          <button
-            id="copyBtn"
-            class="copy-button"
-            aria-label="Copy email address"
-          >
-            📋 Copy
-          </button>
-          <span
-            id="copyMsg"
-            class="copy-msg"
-            role="status"
-            aria-live="polite"
-          ></span>
+          <span id="copyMsg" class="copy-msg" role="status" aria-live="polite"></span>
         </div>
-      </div>
 
       <footer class="legal-footer">
         GHOST&trade; Framework and all associated concepts, terms, and acronyms
