--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
       content="width=device-width, initial-scale=1, viewport-fit=cover"
     />
     <title>GHOST™ AI Framework for Synthetic Sentience</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -18,11 +15,12 @@
       <!-- <div class="logo">GHOST<span class="tm">&trade;</span> FRAMEWORK</div> -->
 
       <div class="content">
-        <div class="title-group">
-          <h1>
-            <span class="ghost-text">GHOST<span class="tm">&trade;</span></span>
-            <span class="framework-text">FRAMEWORK</span>
-          </h1>
+        <div class="logo-image">
+          <img 
+            src="ghost-logo.png" 
+            srcset="ghost-logo-2.png 2x" 
+            alt="GHOST™ Framework logo" 
+          />
         </div>
         <h2>
           Generative Holistic Ontology<br />
