--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
       name="viewport"
       content="width=device-width, initial-scale=1, viewport-fit=cover"
     />
+    
+    <!-- Favicon base -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+    <link rel="shortcut icon" href="/assets/favicon/favicon.ico">
+
+    <!-- Apple devices -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+
+    <!-- Android / manifest -->
+    <link rel="manifest" href="/assets/favicon/site.webmanifest">
+
+    <!-- Optional theme for address bar on mobile -->
+    <meta name="theme-color" content="#000000">
+
     <title>GHOST™ AI Framework for Synthetic Sentience</title>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" />
@@ -17,8 +32,8 @@
       <div class="content">
         <div class="logo-image">
           <img 
-            src="ghost-logo.png" 
-            srcset="ghost-logo-2.png 2x" 
+            src="/assets/logos/ghost-logo.png" 
+            srcset="/assets/logos/ghost-logo-2.png 2x" 
             alt="GHOST™ Framework logo" 
           />
         </div>
