--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Optional theme for address bar on mobile -->
     <meta name="theme-color" content="#000000">
 
-    <title>GHOST™ AI Framework for Synthetic Sentience</title>
+    <title>GHOST AI Framework for Synthetic Sentience</title>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" />
   </head>
@@ -129,7 +129,7 @@
         </div>
 
       <footer class="legal-footer">
-        GHOST&trade; Framework and all associated concepts, terms, and acronyms
+        GHOST&trade; Framework and all associated logos, concepts, terms, and acronyms
         (including 'Generative Holistic Ontology for Synthetic Taxa') are
         &trade; & &copy; Joel Benford-Brown. Proprietary methodologies described
         are protected under copyright and international patent law. Unauthorized
