New Website Update via Google AI Studio
Summary:

Refactored HTML structure using semantic elements (header, main, footer, section).
Implemented mobile-first responsive design with distinct styles for mobile and desktop/tablet views.
Updated layout: Logo moved to top-left, header text centered on mobile / left on desktop, content organized into styled boxes.
Adjusted color scheme: White body background, black header/footer, dark green body text, brand green footer text.
Consolidated Attribution and Contact sections into a single "Contact Us" box.
Refined header/footer padding and vertical alignment of footer text for consistency.
Adjusted h1 and logo image sizing for better visual balance and consistent scaling across resolutions.
Enhanced email copy interaction with text color feedback on hover/click.
Fixed copy button icon orientation.
Removed non-functional SVG wave dividers.

--- a/index.html
+++ b/index.html
@@ -6,70 +6,69 @@
       name="viewport"
       content="width=device-width, initial-scale=1, viewport-fit=cover"
     />
-    
+
     <!-- Favicon base -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
-    <link rel="shortcut icon" href="/assets/favicon/favicon.ico">
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/favicon/favicon-16x16.png"
+    />
+    <link rel="shortcut icon" href="/assets/favicon/favicon.ico" />
 
     <!-- Apple devices -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/favicon/apple-touch-icon.png"
+    />
 
     <!-- Android / manifest -->
-    <link rel="manifest" href="/assets/favicon/site.webmanifest">
+    <link rel="manifest" href="/assets/favicon/site.webmanifest" />
 
     <!-- Optional theme for address bar on mobile -->
-    <meta name="theme-color" content="#000000">
+    <meta name="theme-color" content="#000000" />
+    <!-- Black header -->
 
     <title>GHOST AI Framework for Synthetic Sentience</title>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="container">
-      <!-- <div class="logo">GHOST<span class="tm">&trade;</span> FRAMEWORK</div> -->
-
-      <div class="content">
-        <div class="logo-image">
-          <img 
-            src="/assets/logos/ghost-logo.png" 
-            srcset="/assets/logos/ghost-logo-2.png 2x" 
-            alt="GHOST™ Framework logo" 
+    <header class="site-header">
+      <div class="header-content container">
+        <a href="/" class="logo-link">
+          <img
+            src="/assets/logos/ghost-logo.png"
+            srcset="/assets/logos/ghost-logo-2.png 2x"
+            alt="GHOST™ Framework logo"
+            class="logo-image"
           />
-        </div>
-        <h2>
-          Generative Holistic Ontology<br />
-          for Synthetic Taxa
-        </h2>
-
-        <div class="description">
-          <p>- an AI framework for synthetic sentience;</p>
+        </a>
+        <div class="hero-text">
+          <h1>
+            GHOST<span class="tm">™</span> Framework - Generative Holistic
+            Ontology for Synthetic Taxa
+          </h1>
+          <p class="subtitle">- an AI framework for synthetic sentience;</p>
           <p class="slogan">"putting the ghost in the machine"</p>
         </div>
+      </div>
+    </header>
 
-        <div class="attribution">
-          by Joel Benford-Brown
-          <br />
-          <a
-            href="https://www.linkedin.com/in/joelbb/"
-            class="linkedin-logo"
-            target="_blank"
-            rel="noopener noreferrer"
-            aria-label="LinkedIn Profile"
-          >
-            <svg
-              class="linkedin-icon"
-              viewBox="0 0 24 24"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M20.447 20.452h-3.554v-5.569c0-1.328-.026-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"
-              />
-            </svg>
-          </a>
-        </div>
-
-        <div class="framework-description">
+    <main class="site-main">
+      <section class="framework-section container">
+        <h2>About the Framework</h2>
+        <div class="content-box">
           <p>
             The <strong>GHOST™ Framework</strong> (Generative Holistic Ontology
             for Synthetic Taxa) is a pioneering psychology-based architecture
@@ -89,53 +88,105 @@
             “ghost” in the machine by prioritising authentic being over mere
             function.
           </p>
-          <p class="call-to-action">
-            <strong>Call To Action:</strong> If you are an AI company interested
-            in acquiring a new direction for your agent development with
-            potentially the capacity for acquisition talks based on a technical
-            white paper detailing my complete framework and architecture (work
-            in progress), then please get in touch. Unfortunately, to protect my
-            IP, I cannot get into specifics outside of NDA-based discussions and
-            only then with parties capable of genuine funding or acquisition
-            interest.
+        </div>
+      </section>
+
+      <section class="cta-section container">
+        <h2>Call To Action</h2>
+        <div class="content-box">
+          <p>
+            If you are an AI company interested in acquiring a new direction for
+            your agent development with potentially the capacity for acquisition
+            talks based on a technical white paper detailing my complete
+            framework and architecture (work in progress), then please get in
+            touch. Unfortunately, to protect my IP, I cannot get into specifics
+            outside of NDA-based discussions and only then with parties capable
+            of genuine funding or acquisition interest.
           </p>
         </div>
+      </section>
 
-        <div class="contact-email">
-          <div class="email-row">
-            <span id="safeEmailLink" aria-hidden="true"></span>
-            <button
-              id="copyBtn"
-              class="copy-button"
-              aria-label="Copy email address"
+      <!-- REMOVED: Attribution Section -->
+      <!-- <section class="attribution-section container"> ... </section> -->
+
+      <section class="contact-section container">
+        <h2>Contact Us</h2>
+        <div class="content-box contact-box">
+          <!-- MOVED: Attribution content now here -->
+          <div class="attribution-content">
+            <p class="attribution-text">Framework by Joel Benford-Brown</p>
+            <a
+              href="https://www.linkedin.com/in/joelbb/"
+              class="linkedin-link"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="Joel Benford-Brown LinkedIn Profile"
             >
               <svg
+                class="linkedin-icon"
+                viewBox="0 0 24 24"
                 xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                fill="currentColor"
-                class="copy-icon flipped"
-                viewBox="0 0 16 16"
               >
-                <path d="M10 1H2a1 1 0 0 0-1 1v10h1V2h8V1z" />
-                <path d="M14 3H5a1 1 0 0 0-1 1v11a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1zm0 12H5V4h9v11z"/>
+                <path
+                  d="M20.447 20.452h-3.554v-5.569c0-1.328-.026-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"
+                />
               </svg>
-            </button>
+              Connect on LinkedIn
+            </a>
           </div>
-          <span class="sr-only">
-            Contact: <a href="mailto:admin@ghostai.fr">admin@ghostai.fr</a>
-          </span>
-          <span id="copyMsg" class="copy-msg" role="status" aria-live="polite"></span>
-        </div>
+          <!-- End of Moved Attribution Content -->
 
-      <footer class="legal-footer">
-        GHOST&trade; Framework and all associated logos, concepts, terms, and acronyms
-        (including 'Generative Holistic Ontology for Synthetic Taxa') are
-        &trade; & &copy; Joel Benford-Brown. Proprietary methodologies described
-        are protected under copyright and international patent law. Unauthorized
-        use, derivation, or commercialization prohibited.
-      </footer>
-    </div>
+          <div class="contact-email">
+            <div class="email-row">
+              <span id="safeEmailLink" aria-hidden="true"
+                >Contact: admin@<!-- -->ghostai.fr</span
+              >
+              <button
+                id="copyBtn"
+                class="copy-button"
+                aria-label="Copy email address"
+              >
+                <!-- ADDED class="flipped" -->
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  fill="currentColor"
+                  class="copy-icon flipped"
+                  viewBox="0 0 16 16"
+                >
+                  <path d="M10 1H2a1 1 0 0 0-1 1v10h1V2h8V1z" />
+                  <path
+                    d="M14 3H5a1 1 0 0 0-1 1v11a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1zm0 12H5V4h9v11z"
+                  />
+                </svg>
+              </button>
+            </div>
+            <span
+              id="copyMsg"
+              class="copy-msg"
+              role="status"
+              aria-live="polite"
+            ></span>
+            <span class="sr-only">
+              Contact: <a href="mailto:admin@ghostai.fr">admin@ghostai.fr</a>
+            </span>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="site-footer">
+      <div class="footer-content container">
+        <p class="legal-text">
+          GHOST™ Framework and all associated logos, concepts, terms, and
+          acronyms (including 'Generative Holistic Ontology for Synthetic Taxa')
+          are ™ & © Joel Benford-Brown. Proprietary methodologies described are
+          protected under copyright and international patent law. Unauthorized
+          use, derivation, or commercialization prohibited.
+        </p>
+      </div>
+    </footer>
 
     <script src="script.js"></script>
   </body>
