--- a/index.html
+++ b/index.html
@@ -55,9 +55,12 @@
           />
         </a>
         <div class="hero-text">
+          <!-- MODIFIED: Added <br> after hyphen -->
           <h1>
-            GHOST<span class="tm">™</span> Framework - Generative Holistic
-            Ontology for Synthetic Taxa
+            GHOST<span class="tm">™</span> Framework -<br /><span
+              class="group2-3"
+              >Generative Holistic Ontology for Synthetic Taxa</span
+            >
           </h1>
           <p class="subtitle">- an AI framework for synthetic sentience;</p>
           <p class="slogan">"putting the ghost in the machine"</p>
@@ -106,13 +109,9 @@
         </div>
       </section>
 
-      <!-- REMOVED: Attribution Section -->
-      <!-- <section class="attribution-section container"> ... </section> -->
-
       <section class="contact-section container">
         <h2>Contact Us</h2>
         <div class="content-box contact-box">
-          <!-- MOVED: Attribution content now here -->
           <div class="attribution-content">
             <p class="attribution-text">Framework by Joel Benford-Brown</p>
             <a
@@ -134,7 +133,6 @@
               Connect on LinkedIn
             </a>
           </div>
-          <!-- End of Moved Attribution Content -->
 
           <div class="contact-email">
             <div class="email-row">
@@ -146,7 +144,6 @@
                 class="copy-button"
                 aria-label="Copy email address"
               >
-                <!-- ADDED class="flipped" -->
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="16"
