--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             >
           </h1>
           <p class="subtitle">- an AI framework for synthetic sentience;</p>
-          <p class="slogan">"putting the ghost in the machine"</p>
+          <p class="slogan">"putting the 'ghost' in the machine"</p>
         </div>
       </div>
     </header>
