--- a/index.html
+++ b/index.html
@@ -55,10 +55,9 @@
           />
         </a>
         <div class="hero-text">
-          <!-- MODIFIED: Added <br> after hyphen -->
+          <!-- MODIFIED: Removed H1 prefix, kept span/  structure -->
           <h1>
-            GHOST<span class="tm">™</span> Framework -<br /><span
-              class="group2-3"
+            <span class="group2-3"
               >Generative Holistic Ontology for Synthetic Taxa</span
             >
           </h1>
