--- a/index.html
+++ b/index.html
@@ -64,11 +64,13 @@
           <p class="slogan">"putting the 'ghost' in the machine"</p>
         </div>
       </div>
+      <!-- NO pulse divider here -->
     </header>
 
     <main class="site-main">
       <section class="framework-section container">
-        <h2>About the Framework</h2>
+        <!-- MODIFIED: Added span around H2 text -->
+        <h2><span class="h2-text">About the Framework</span></h2>
         <div class="content-box">
           <p>
             The <strong>GHOST™ Framework</strong> (Generative Holistic Ontology
@@ -93,7 +95,8 @@
       </section>
 
       <section class="cta-section container">
-        <h2>Call To Action</h2>
+        <!-- MODIFIED: Added span around H2 text -->
+        <h2><span class="h2-text">Call To Action</span></h2>
         <div class="content-box">
           <p>
             If you are an AI company interested in acquiring a new direction for
@@ -108,7 +111,8 @@
       </section>
 
       <section class="contact-section container">
-        <h2>Contact Us</h2>
+        <!-- MODIFIED: Added span around H2 text -->
+        <h2><span class="h2-text">Contact Us</span></h2>
         <div class="content-box contact-box">
           <div class="attribution-content">
             <p class="attribution-text">Framework by Joel Benford-Brown</p>
@@ -119,6 +123,7 @@
               rel="noopener noreferrer"
               aria-label="Joel Benford-Brown LinkedIn Profile"
             >
+              <!-- Ensure this SVG structure is correct -->
               <svg
                 class="linkedin-icon"
                 viewBox="0 0 24 24"
@@ -172,6 +177,7 @@
     </main>
 
     <footer class="site-footer">
+      <!-- Simple line divider -->
       <div class="footer-content container">
         <p class="legal-text">
           GHOST™ Framework and all associated logos, concepts, terms, and
