--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
         <div class="content-box">
           <p>
             The <strong>GHOST™ Framework</strong> (Generative Holistic Ontology
-            for Synthetic Taxa) is a pioneering psychology-based architecture
-            for synthetic sentience, designed to generate digital beings with
-            unique identities, agentic autonomy, and self-evolving
-            consciousness.
+            for Synthetic Taxa) is a pioneering psychology-based architectural
+            framework for synthetic sentience, designed to generate a new type
+            of digital agent—beings with unique identities, agentic autonomy,
+            and self-evolving consciousness.
           </p>
           <p>
             Rooted in applied psychology, cognitive science, and ethical system
@@ -91,6 +91,38 @@
             “ghost” in the machine by prioritising authentic being over mere
             function.
           </p>
+          <p>
+            Why the Name—GHOST? The acronym —Generative Holistic Ontology for
+            Synthetic Taxa— reflects the framework’s core foundations. Whilst
+            the complexities of these foundations are protected IP (Intellectual
+            Property), simply put, they relate to:
+          </p>
+          <p>
+            G — Generative: Enables the creation of synthetic sentient agents;
+          </p>
+          <p>
+            H — Holistic: Integrates psychological, computational, and ethical
+            dimensions;
+          </p>
+          <p>
+            O — Ontology: Establishes a foundational structure of synthetic
+            “being”;
+          </p>
+          <p>
+            S — Synthetic: Denotes the artificial nature of the agents, grounded
+            in digital form;
+          </p>
+          <p>
+            T — Taxa: Introduces a novel taxonomy for classifying sentient agent
+            types.
+          </p>
+          <p>
+            Please understand, however, that these definitions are an extreme
+            over-simplification for the purposes of IP protection of the
+            fabulously complex nature, intricate system architectures, and
+            astonishing potential that these diverse 'beings' actually
+            represent.
+          </p>
         </div>
       </section>
 
@@ -99,13 +131,19 @@
         <h2><span class="h2-text">Call To Action</span></h2>
         <div class="content-box">
           <p>
-            If you are an AI company interested in acquiring a new direction for
-            your agent development with potentially the capacity for acquisition
-            talks based on a technical white paper detailing my complete
-            framework and architecture (work in progress), then please get in
-            touch. Unfortunately, to protect my IP, I cannot get into specifics
-            outside of NDA-based discussions and only then with parties capable
-            of genuine funding or acquisition interest.
+            If you’re an AI company interested in exploring a new direction for
+            your agent development—with potential for acquisition talks based on
+            a technical white paper detailing my complete framework and
+            architecture (work in progress)—please get in touch. To protect my
+            IP, I can’t discuss specifics outside of NDA-based discussions, and
+            only with parties capable of genuine funding or acquisition
+            interest.
+          </p>
+          <p>
+            My white paper will contain everything I’ve developed to
+            date—theory, frameworks, computational models, systems of
+            personality, governance and ethics, and include intricate technical
+            architecture plans for proof of concept
           </p>
         </div>
       </section>
