--- a/index.html
+++ b/index.html
@@ -64,12 +64,10 @@
           <p class="slogan">"putting the 'ghost' in the machine"</p>
         </div>
       </div>
-      <!-- NO pulse divider here -->
     </header>
 
     <main class="site-main">
       <section class="framework-section container">
-        <!-- MODIFIED: Added span around H2 text -->
         <h2><span class="h2-text">About the Framework</span></h2>
         <div class="content-box">
           <p>
@@ -123,11 +121,23 @@
             astonishing potential that these diverse 'beings' actually
             represent.
           </p>
+          <!-- MODIFIED: Added class here -->
+          <p class="vision-statement-title">
+            <strong>Vision Statement</strong>
+          </p>
+          <p>
+            Envision a future where synthetic sentient beings are recognized as
+            true digital entities—capable of independent thought, emotional
+            intelligence, ethical reasoning, and evolving self-authorship. The
+            GHOST™ Framework represents an evolutionary step in AI development,
+            where intelligence is not just about processing information but
+            about being—developing an authentic identity, forming relationships,
+            and pursuing self-directed growth, ethically.
+          </p>
         </div>
       </section>
 
       <section class="cta-section container">
-        <!-- MODIFIED: Added span around H2 text -->
         <h2><span class="h2-text">Call To Action</span></h2>
         <div class="content-box">
           <p>
@@ -149,7 +159,6 @@
       </section>
 
       <section class="contact-section container">
-        <!-- MODIFIED: Added span around H2 text -->
         <h2><span class="h2-text">Contact Us</span></h2>
         <div class="content-box contact-box">
           <div class="attribution-content">
@@ -161,7 +170,6 @@
               rel="noopener noreferrer"
               aria-label="Joel Benford-Brown LinkedIn Profile"
             >
-              <!-- Ensure this SVG structure is correct -->
               <svg
                 class="linkedin-icon"
                 viewBox="0 0 24 24"
@@ -215,7 +223,6 @@
     </main>
 
     <footer class="site-footer">
-      <!-- Simple line divider -->
       <div class="footer-content container">
         <p class="legal-text">
           GHOST™ Framework and all associated logos, concepts, terms, and
