--- a/index.html
+++ b/index.html
@@ -121,7 +121,6 @@
             astonishing potential that these diverse 'beings' actually
             represent.
           </p>
-          <!-- MODIFIED: Added class here -->
           <p class="vision-statement-title">
             <strong>Vision Statement</strong>
           </p>
@@ -220,7 +219,31 @@
           </div>
         </div>
       </section>
+
+      <!-- ADDED: Container and Button *inside* main -->
+      <div class="back-to-top-container container">
+        <button
+          id="backToTopBtnStatic"
+          class="back-to-top-static"
+          title="Go to top"
+          aria-label="Scroll to top"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            viewBox="0 0 16 16"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"
+            />
+          </svg>
+        </button>
+      </div>
     </main>
+    <!-- End of main content -->
 
     <footer class="site-footer">
       <div class="footer-content container">
