--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             My white paper will contain everything I’ve developed to
             date—theory, frameworks, computational models, systems of
             personality, governance and ethics, and include intricate technical
-            architecture plans for proof of concept
+            architecture plans for proof of concept.
           </p>
         </div>
       </section>
