--- a/index.html
+++ b/index.html
@@ -114,6 +114,21 @@
       <section id="about-framework" class="framework-section container">
         <h2><span class="h2-text">About the Framework</span></h2>
         <div class="content-box">
+          <p class="vision-statement-title">
+            <strong>The Current AI Agent Landscape</strong>
+          </p>
+          <p>
+            "The lack of true personality persistence in AI is a major issue. My
+            work-in-progress framework, shaped by my dual background in
+            psychology and software, focuses on ethical, evolving identities,
+            where a persistent personality is foundational and endures. Still
+            early days, but this framework is striving to generate AI agents
+            capable of maintaining a coherent sense of self over time — an
+            essential progression if AI is ever to build real trust!"
+          </p>
+          <p class="vision-statement-title">
+            <strong>Our Solution</strong>
+          </p>
           <p>
             The <strong>GHOST™ Framework</strong> (Generative Holistic Ontology
             for Synthetic Taxa) is a pioneering psychology-based architectural
@@ -185,18 +200,18 @@
         <div class="content-box">
           <p>
             If you’re an AI company interested in exploring a new direction for
-            your agent development—with potential for acquisition talks based on
-            a technical white paper detailing my complete framework and
-            architecture (work in progress)—please get in touch. To protect my
-            IP, I can’t discuss specifics outside of NDA-based discussions, and
-            only with parties capable of genuine funding or acquisition
-            interest.
+            your agent development—with potential for funding or acquisition
+            talks based on a technical white paper detailing my complete
+            framework and architecture (work in progress)—please get in touch.
+            To protect my IP, I can’t discuss specifics outside of NDA-based
+            discussions, and only with parties capable of genuine funding or
+            acquisition interest.
           </p>
           <p>
-            My white paper will contain everything I’ve developed to
-            date—theory, frameworks, computational models, systems of
-            personality, governance and ethics, and include intricate technical
-            architecture plans for proof of concept.
+            My white paper contains everything I’ve developed to date—theory,
+            frameworks, computational models, systems of personality, governance
+            and ethics, and includes intricate technical architecture plans for
+            proof of concept.
           </p>
         </div>
       </section>
