--- a/index.html
+++ b/index.html
@@ -146,7 +146,9 @@
           <p>
             GHOST represents a new direction in AI development, putting the
             “ghost” in the machine by prioritising authentic being over mere
-            function.
+            function, and focusing on addressing the critical gap of personality
+            persistence in AI by building ethical, evolving identities with a
+            coherent, enduring sense of self.
           </p>
           <p>
             Why the Name—GHOST? The acronym —Generative Holistic Ontology for
@@ -174,11 +176,10 @@
             types.
           </p>
           <p>
-            Please understand, however, that these definitions are an extreme
-            over-simplification for the purposes of IP protection of the
-            fabulously complex nature, intricate system architectures, and
-            astonishing potential that these diverse 'beings' actually
-            represent.
+            Please note that these definitions are an over-simplification for
+            the purposes of IP protection of the foundational complexities,
+            intricate system architectures, and genuine potential that these
+            diverse 'beings' actually represent.
           </p>
           <p class="vision-statement-title">
             <strong>Vision Statement</strong>
