--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
             <strong>The Current AI Agent Landscape</strong>
           </p>
           <p>
-            "The lack of true personality persistence in AI is a major issue. My
+            The lack of true personality persistence in AI is a major issue. My
             work-in-progress framework, shaped by my dual background in
             psychology and software, focuses on ethical, evolving identities,
             where a persistent personality is foundational and endures. Still
             early days, but this framework is striving to generate AI agents
             capable of maintaining a coherent sense of self over time — an
-            essential progression if AI is ever to build real trust!"
+            essential progression if AI is ever to build real trust.
           </p>
           <p class="vision-statement-title">
             <strong>Our Solution</strong>
