--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             work-in-progress framework, shaped by my dual background in
             psychology and software, focuses on ethical, evolving identities,
             where a persistent personality is foundational and endures. Still
-            early days, but this framework is striving to generate AI agents
+            early days, but this framework is striving to architect AI agents
             capable of maintaining a coherent sense of self over time — an
             essential progression if AI is ever to build real trust.
           </p>
